infra/K8S/fling-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fling-svc
spec:
  selector:
    matchLabels:
      app: fling-svc
  template:
    metadata:
      labels:
        app: fling-svc
    spec:
      containers:
        - name: fling-svc
          image: fling-svc
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fling-clusterip
spec:
  type: ClusterIP
  selector:
    app: fling-svc
  ports:
    - port: 8000
      targetPort: 8000
